--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -153,3 +153,31 @@ body {
   border-radius: 10px;
   animation: moveGradient 3s alternate infinite;
 }
+/* =================================== */
+
+.linear-wipe {
+  background: linear-gradient(to right,
+      #0ef69d 0%,
+      #22bbfc 20%,
+      #0ef69d 32%,
+      #1eace9 48%,
+      #0ef69d 64%,
+      #1eace9 80%,
+      #5dff78 96%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  background-size: 500% auto;
+  animation: textShine 5s ease-in-out infinite alternate;
+}
+
+@keyframes textShine {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  100% {
+    background-position: 100% 50%;
+  }
+}
