--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -88,6 +88,25 @@ body {
               #000000 100%)
 }
 
+.custom-scrollbar::-webkit-scrollbar {
+  width: 5px;
+  /* vertical scrollbar width */
+  height: 0.67px;
+  /* horizontal scrollbar height */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #b3efd0cd;
+  border-radius: 60px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
 /* ------------- */
 /* Scrollbar width */
 ::-webkit-scrollbar {
